# qml-template

./: .gitignore  CMakeLists.txt  LICENSE
qml/: App.qml  ContentView.qml  Header.qml  Main.qml  Sidebar.qml
qml/components/: HeaderButton.qml  SidebarButton.qml
qml/pages/: Data.qml  Device.qml  Info.qml  MainView.qml  Settings.qml
src/: main.cpp
